--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
 </form>  
   
 <br/>  
-<a href="ViewServlet">view employees</a>  
-  demo test
-</body>  
+
+</body>  <a href="ViewServlet">view employees</a>  
+  user2
 </html>  
